--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,13 @@ android {
 
 dependencies {
     implementation 'org.osmdroid:osmdroid-android:6.1.11'
+    // implementation 'com.github.mkergall:osmbonuspack:6.8.0'
+
+    api fileTree(dir: 'libs', include: ['*.aar'])
+    implementation files('../libs/osmbonuspack_6.7.0.aar')
+    implementation 'org.apache.commons:commons-lang3:3.8.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
