--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,18 +38,32 @@ dependencies {
     implementation 'org.osmdroid:osmdroid-android:6.1.11'
     // implementation 'com.github.mkergall:osmbonuspack:6.8.0'
 
-    api fileTree(dir: 'libs', include: ['*.aar'])
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
     implementation files('../libs/osmbonuspack_6.7.0.aar')
     implementation 'org.apache.commons:commons-lang3:3.8.1'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.collection:collection-ktx:'
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
+    implementation 'androidx.room:room-ktx:2.3.0'
+    implementation 'androidx.sqlite:sqlite-ktx:2.1.0'
+    implementation 'androidx.work:work-runtime-ktx:2.6.0'
+
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.30'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    implementation 'androidx.test:core-ktx:1.4.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
