--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,16 @@ plugins {
     id 'kotlin-android'
 }
 
+// kapt: kotlin annotations, for compiler (for Hilt, in this case)
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
+}
+
+
 android {
     compileSdk 30
 
@@ -40,13 +50,15 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.aar'])
     implementation files('../libs/osmbonuspack_6.7.0.aar')
-    implementation 'org.apache.commons:commons-lang3:3.8.1'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'com.google.code.gson:gson:2.8.8'
 
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+
+    implementation 'com.google.dagger:hilt-android:2.38.1'
+    kapt 'com.google.dagger:hilt-compiler:2.38.1'
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.collection:collection-ktx:'
@@ -59,7 +71,7 @@ dependencies {
     implementation 'androidx.sqlite:sqlite-ktx:2.1.0'
     implementation 'androidx.work:work-runtime-ktx:2.6.0'
 
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.30'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.31'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
