--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,12 +14,12 @@ kapt {
 
 
 android {
-    compileSdk 30
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.cleanup.go4lunch"
-        minSdk 21
-        targetSdk 30
+        minSdk 21 // TODO ARNAUD multidex à mettre en place :D
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -64,17 +64,12 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.collection:collection-ktx:'
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    // Provides lifecycle and coroutines scopes
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-rc01"
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.room:room-ktx:2.3.0'
     implementation 'androidx.sqlite:sqlite-ktx:2.1.0'
     implementation 'androidx.work:work-runtime-ktx:2.6.0'
-
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.31'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
     implementation 'androidx.test:core-ktx:1.4.0'
 
