--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,11 @@ android {
 
     defaultConfig {
         applicationId "com.cleanup.go4lunch"
-        minSdk 21 // TODO ARNAUD multidex à mettre en place :D
+        minSdk 21 // TODO ARNAUD multidex à mettre en place :D => 19
         targetSdk 31
         versionCode 1
         versionName "1.0"
+        // multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -33,6 +34,7 @@ android {
         }
     }
     compileOptions {
+        // coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -59,6 +61,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
     implementation 'com.google.dagger:hilt-android:2.38.1'
+    kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
     kapt 'com.google.dagger:hilt-compiler:2.38.1'
 
     implementation 'androidx.core:core-ktx:1.6.0'
@@ -68,6 +71,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-rc01"
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.room:room-ktx:2.3.0'
+
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+
     implementation 'androidx.sqlite:sqlite-ktx:2.1.0'
     implementation 'androidx.work:work-runtime-ktx:2.6.0'
 
