--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    // id 'jacoco'
 }
 
 // kapt: kotlin annotations, for compiler (for Hilt, in this case)
@@ -22,7 +23,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
+        multiDexEnabled true  // minSdk 20 or lower
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -34,6 +35,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled = true  // LocalDateTime / java.time.ZonedDateTime
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -41,11 +43,19 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+        viewBinding false
+        dataBinding false
+    }
+    testOptions {
+        unitTests.returnDefaultValues = true
+        animationsDisabled = true
+
     }
 }
 
 dependencies {
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")  // LocalDateTime...
+
     implementation 'org.osmdroid:osmdroid-android:6.1.11'
 
     implementation 'com.google.code.gson:gson:2.8.8'
@@ -81,3 +91,35 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
+// todo remove this if jacoco applies not to kotlin
+android.applicationVariants.all { variant ->
+    def variantName = variant.name.capitalize()
+    def filesToAnalyze = [
+            '**/*ViewModel.class',
+            '**/*Repository.class'
+    ]
+
+    task("jacoco${variantName}Report", type: JacocoReport, dependsOn: "test${variantName}UnitTest") {
+        group 'Reporting'
+        description "Generate ${variantName} Jacoco coverage reports."
+
+        def htmlOutDir = layout.buildDirectory.dir("reports/jacoco/$name/html").get().asFile
+
+        doLast {
+            openReport htmlOutDir
+        }
+
+        reports {
+            xml.enabled = true
+            html {
+                destination htmlOutDir
+            }
+        }
+
+        getSourceDirectories().setFrom(files(android.sourceSets.main.java.srcDirs))
+        getExecutionData().setFrom(files("${buildDir}/jacoco/test${variantName}UnitTest.exec"))
+        getClassDirectories().setFrom(fileTree(dir: variant.javaCompiler.destinationDir, includes: filesToAnalyze))
+    }
+}
+
