--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
     kapt 'com.google.dagger:hilt-compiler:2.38.1'
 
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.collection:collection-ktx:'
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
