--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 
     implementation 'org.osmdroid:osmdroid-android:6.1.11'
 
+    implementation 'io.leonard:opening-hours-evaluator:1.2.1'
+
     implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.squareup.okhttp3:okhttp:4.8.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
