--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled = true  // LocalDateTime / java.time.ZonedDateTime
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -52,6 +53,8 @@ android {
 }
 
 dependencies {
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")  // LocalDateTime...
+
     implementation 'org.osmdroid:osmdroid-android:6.1.11'
 
     implementation 'io.leonard:opening-hours-evaluator:1.3.0'
