--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
     // Provides lifecycle and coroutines scopes
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.room:room-ktx:2.3.0'
     implementation "androidx.room:room-runtime:2.3.0"
