--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,12 +76,14 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.collection:collection-ktx:'
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
     // Provides lifecycle and coroutines scopes
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.room:room-ktx:2.3.0'
     implementation "androidx.room:room-runtime:2.3.0"
