--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,10 @@ dependencies {
     implementation 'io.leonard:opening-hours-evaluator:1.3.0'
 
     implementation 'com.google.code.gson:gson:2.8.8'
-    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))  // automatically get latest version
+    implementation 'com.squareup.okhttp3:okhttp'
+    implementation 'com.squareup.okhttp3:logging-interceptor'
+    implementation 'com.squareup.okhttp3:okhttp-tls'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
