--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Go4Lunch"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/Theme.Go4Lunch">
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
