--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         <activity
             android:name=".ui.detail.DetailsActivity"
             android:exported="true"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:parentActivityName=".ui.main.MainActivity" />
     </application>
-
 </manifest>
+
