--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.preference:preference:1.1.1'
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")  // LocalDateTime...
 
     implementation 'org.osmdroid:osmdroid-android:6.1.11'
