--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,17 @@
         android:theme="@style/Theme.Go4Lunch"
         tools:targetApi="n">
         <activity
+            android:name=".ui.settings.SettingsActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:parentActivityName=".ui.main.MainActivity"/>
+        <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -34,5 +40,5 @@
             android:label="@string/app_name"
             android:parentActivityName=".ui.main.MainActivity" />
     </application>
-</manifest>
 
+</manifest>
