--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:name=".ui.settings.SettingsActivity"
             android:exported="false"
             android:label="@string/app_name"
+            android:theme="@style/Theme.Go4Lunch.preferences"
             android:parentActivityName=".ui.main.MainActivity"/>
         <activity
             android:name=".ui.main.MainActivity"
