--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
             android:name=".ui.settings.SettingsActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Go4Lunch.preferences"
-            android:parentActivityName=".ui.main.MainActivity"/>
+            android:parentActivityName=".ui.main.MainActivity"
+            android:theme="@style/Theme.Go4Lunch.preferences" />
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
@@ -38,8 +38,7 @@
         <activity
             android:name=".ui.detail.DetailsActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:parentActivityName=".ui.main.MainActivity" />
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
