--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.SET_ALARM" />
 
     <application
         android:name=".MainApplication"
@@ -24,6 +25,10 @@
             android:exported="false"
             android:label="@string/app_name"
             android:parentActivityName=".ui.main.MainActivity"
+            android:theme="@style/Theme.Go4Lunch.preferences" />
+        <activity
+            android:name=".ui.alarm.AlarmActivity"
+            android:exported="true"
             android:theme="@style/Theme.Go4Lunch.preferences" />
         <activity
             android:name=".ui.main.MainActivity"
