--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,8 @@ dependencies {
     implementation 'io.leonard:opening-hours-evaluator:1.3.0'
 
     implementation 'com.google.code.gson:gson:2.8.8'
-    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))  // automatically get latest version
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
+    // automatically get latest version
     implementation 'com.squareup.okhttp3:okhttp'
     implementation 'com.squareup.okhttp3:logging-interceptor'
     implementation 'com.squareup.okhttp3:okhttp-tls'
@@ -98,7 +99,11 @@ dependencies {
 
     implementation 'androidx.test:core-ktx:1.4.0'
 
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
+    testImplementation 'io.mockk:mockk:1.12.0'
     testImplementation 'junit:junit:4.13.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
