--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.38.1'
     kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
     kapt 'com.google.dagger:hilt-compiler:2.38.1'
+    implementation "androidx.hilt:hilt-work:1.0.0"
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
@@ -90,11 +91,11 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     implementation 'androidx.preference:preference-ktx:1.2.0-rc01'
-    implementation 'androidx.room:room-ktx:2.3.0'
-    implementation "androidx.room:room-runtime:2.3.0"
-    kapt "androidx.room:room-compiler:2.3.0"
+    implementation 'androidx.room:room-ktx:2.4.0'
+    implementation "androidx.room:room-runtime:2.4.0"
+    kapt "androidx.room:room-compiler:2.4.0"
 
-    implementation 'androidx.sqlite:sqlite-ktx:2.1.0'
+    implementation 'androidx.sqlite:sqlite-ktx:2.2.0'
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
     implementation 'androidx.test:core-ktx:1.4.0'
