--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:parentActivityName=".ui.main.MainActivity"
             android:theme="@style/Theme.Go4Lunch.preferences" />
         <activity
-            android:name=".ui.alarm.AlarmActivity"
+            android:name=".ui.alarm.NotificationWorker"
             android:exported="true"
             android:theme="@style/Theme.Go4Lunch.preferences" />
         <activity
