--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.38.1'
     kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
     kapt 'com.google.dagger:hilt-compiler:2.38.1'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
     implementation "androidx.hilt:hilt-work:1.0.0"
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
