--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.SET_ALARM" />
 
     <application
         android:name=".MainApplication"
@@ -20,6 +19,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Go4Lunch"
         tools:targetApi="n">
+        <!-- https://developer.android.com/jetpack/androidx/releases/work#2.6.0-alpha01 -->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:node="remove" />
         <activity
             android:name=".ui.settings.SettingsActivity"
             android:exported="false"
@@ -27,16 +31,11 @@
             android:parentActivityName=".ui.main.MainActivity"
             android:theme="@style/Theme.Go4Lunch.preferences" />
         <activity
-            android:name=".ui.alarm.NotificationWorker"
-            android:exported="true"
-            android:theme="@style/Theme.Go4Lunch.preferences" />
-        <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
