--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,19 +54,19 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.preference:preference-ktx:1.1.1'
+    implementation 'androidx.preference:preference-ktx:1.2.0-rc01'
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")  // LocalDateTime...
 
     implementation 'org.osmdroid:osmdroid-android:6.1.11'
 
     implementation 'io.leonard:opening-hours-evaluator:1.3.0'
 
-    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
     // automatically get latest version
-    implementation 'com.squareup.okhttp3:okhttp'
-    implementation 'com.squareup.okhttp3:logging-interceptor'
-    implementation 'com.squareup.okhttp3:okhttp-tls'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.3'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3'
+    implementation 'com.squareup.okhttp3:okhttp-tls:5.0.0-alpha.3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
@@ -74,9 +74,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
-    implementation 'com.google.dagger:hilt-android:2.38.1'
-    kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
-    kapt 'com.google.dagger:hilt-compiler:2.38.1'
+    implementation 'com.google.dagger:hilt-android:2.40.5'
+    kapt 'com.google.dagger:hilt-android-compiler:2.40.5'
+    kapt 'com.google.dagger:hilt-compiler:2.40.5'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
     implementation "androidx.hilt:hilt-work:1.0.0"
 
@@ -84,7 +84,7 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.collection:collection-ktx:'
+    implementation 'androidx.collection:collection-ktx:1.2.0'
     implementation 'androidx.fragment:fragment-ktx:1.4.0'
     // Provides lifecycle and coroutines scopes
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
@@ -102,8 +102,8 @@ dependencies {
     implementation 'androidx.test:core-ktx:1.4.0'
 
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
-    testImplementation 'io.mockk:mockk:1.12.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0-native-mt'
+    testImplementation 'io.mockk:mockk:1.12.2'
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
