--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
+    // fuzzy string matching, LevenshteinDistance
+    implementation 'org.apache.commons:commons-text:1.9'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.collection:collection-ktx:1.2.0'
     implementation 'androidx.fragment:fragment-ktx:1.4.0'
