authorizations ground work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,20 @@
             android:name=".ui.detail.DetailsActivity"
             android:exported="true"
             android:label="@string/app_name" />
-    </application>
+        <activity
+            android:name=".ui.connection.ConnectionActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="arnaudv6.freemyip.com"
+                    android:path="/go4lunch/oauth2redirect"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
+    </application>
 </manifest>
