--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,12 +54,13 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.preference:preference-ktx:1.2.0-rc01'
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")  // LocalDateTime...
 
     implementation 'org.osmdroid:osmdroid-android:6.1.11'
 
     implementation 'io.leonard:opening-hours-evaluator:1.3.0'
+
+    implementation 'net.openid:appauth:0.11.1'
 
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
@@ -73,13 +74,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.preference:preference-ktx:1.2.0-rc01'
 
+    // dependency injection
     implementation 'com.google.dagger:hilt-android:2.40.5'
     kapt 'com.google.dagger:hilt-android-compiler:2.40.5'
     kapt 'com.google.dagger:hilt-compiler:2.40.5'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
     implementation "androidx.hilt:hilt-work:1.0.0"
 
+    // glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
