--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders = ['appAuthRedirectScheme': 'com.freemyip.arnaudv6.go4lunch']
     }
 
     buildTypes {
